--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.link {
+  color: #2f80ed;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -16,9 +20,6 @@
   /* выше установили ограничения для секции */
   display: flex;
   position: relative;
-}
-
-.logo{
 }
 
 .logo_place_header {
@@ -38,14 +39,66 @@
   padding-left: 64px;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__subtitle {
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  position:absolute;
+  left: 64px;
+  bottom: 30px;
+  z-index: 1;
+}
+
+.header__image {
+  width: 765px;
+  height: 608px;
+  position:absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
 .header__square-pic {
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
+  position:absolute;
+  right: 0;
+  padding-top: 64px;
 }
 
 
+
+
+
+.description {
+  display:flex;
+  margin: 100px auto;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.main-text {
+  width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
 
 
 /* и элемента с модификатором вида ключ-значение */
