--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
 
 .link {
   color: #2f80ed;
+  text-decoration: none;
 }
 
 .header {
@@ -20,6 +21,7 @@
   /* выше установили ограничения для секции */
   display: flex;
   position: relative;
+  background-color: #f2f2f2;
 }
 
 .logo_place_header {
@@ -71,22 +73,23 @@
 
 
 
-
-.description {
+.two-columns {
   display:flex;
   margin: 100px auto;
   justify-content: space-between;
   width: 80%;
+  min-height: 100%;
 }
 
-.brief {
+.two-columns__brief {
+  margin: 0;
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
 }
 
-.main-text {
+.two-columns__main-text {
   width: 80%;
   min-width: 784px;
   line-height: 34px;
@@ -94,11 +97,138 @@
   font-weight: normal;
 }
 
+.paragraph {
+  margin: 0 auto;
+  padding-bottom: 30px;
+}
+.paragraph:last-of-type {
+  padding-bottom: 0;
+}
+
 .span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
 }
+
+
+
+
+
+.digits {
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
+.section__title {
+  margin: 0 0 20px;
+  width: 60%;
+  text-align: center;
+  line-height: 1.2;
+  font-size: 60px;
+  font-weight: bold;
+
+}
+
+.section__subtitle {
+  margin: 0;
+  width: 60%;
+  text-align: center;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 1110px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  padding-top: 60px;
+}
+
+.table__cell_heading {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.table__cell_text {
+  margin: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  padding-top: 20px;
+}
+
+
+
+
+.feynman {
+  background-color: #f2f2f2;
+  margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box;
+  height: 890px;
+}
+
+.feynman_image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  height: 637px;
+  width: 867px;
+}
+
+.section__title_feynman {
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 100px 0 70px;
+  z-index: 1;
+}
+
+.section__subtitle_feynman {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.link_feynman {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+    right:48px;
+    top: 50%;
+  z-index: 1;
+}
+
+
+
+
+
+
+
+
 
 
 /* и элемента с модификатором вида ключ-значение */
