--- a/styles/style.css
+++ b/styles/style.css
@@ -5,11 +5,6 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.link {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
 .header {
   height: 100vh;
   min-height: 600px;
@@ -19,44 +14,58 @@
   background-color: #f2f2f2;
 }
 
-.logo_place_header {
-  position:absolute;
-  z-index: 1;
-  top:30px;
-  left: 64px;
-  width: 183px;
-  height: 32px;
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+  transition: all 1s;
 }
 
-.logo_place_footer {
+.header__link:hover {
+  color: #006eff;
+  text-shadow: 3px -3px 4px rgb(155, 155, 155);
+  font-size: 24px;
+}
+
+.logo {
   width: 183px;
+}
+.logo_place_header {
+  position:absolute;
+  z-index: 2;
+  top:30px;
+  left: 64px;
+  height: 32px;
+}
+.logo_place_footer {
   height: 35px;
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
+  width: 100%;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
   align-self: center;
-  z-index: 1;
+  z-index: 2;
   padding-left: 64px;
   margin: 0;
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
+  width: 100%;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   position:absolute;
   left: 64px;
   bottom: 30px;
-  z-index: 1;
+  z-index: 2;
   margin: 0;
 }
 
-.header__image {
+.header__main-illustration {
   width: 765px;
   height: 608px;
   position:absolute;
@@ -89,6 +98,7 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  color: #2f80ed;
 }
 
 .two-columns__main-text {
@@ -99,15 +109,16 @@
   font-weight: normal;
 }
 
-.paragraph {
+.two-columns__paragraph {
   margin: 0 auto;
   padding-bottom: 30px;
 }
-.paragraph:last-of-type {
+
+.two-columns__paragraph:last-of-type {
   padding-bottom: 0;
 }
 
-.span-accent {
+.two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
@@ -129,14 +140,6 @@
   font-weight: bold;
 }
 
-.section__title_feynman {
-  margin-bottom: 70px;
-  width: 648px;
-  line-height: 1.15;
-  font-size: 120px;
-  z-index: 1;
-}
-
 .section__title_theme_dark {
   color: #f2f2f2;
   line-height: 1.15;
@@ -150,12 +153,6 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-}
-
-.section__subtitle_feynman {
-  line-height: 51px;
-  font-size: 36px;
-  z-index: 1;
 }
 
 .section__subtitle_theme_dark {
@@ -178,6 +175,7 @@
   width: 250px;
   padding-top: 60px;
 }
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
@@ -208,26 +206,53 @@
   align-items: center;
   position: relative;
   box-sizing: border-box;
-  height: 890px;
+  min-height: 890px;
 }
 
-.feynman_image {
+.feynman__title {
+  margin: 0 0 70px;
+  width: 648px;
+  text-align: center;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  z-index: 1;
+}
+
+.feynman__subtitle {
+  margin: 0;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 1;
+}
+
+.feynman__link {
+  color: #2f80ed;
+  text-decoration: none;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  right:48px;
+  top: 50%;
+  z-index: 1;
+  transition: all 1s;
+}
+
+.feynman__link:hover {
+  color: #006eff;
+  text-shadow: 3px -3px 4px rgb(155, 155, 155);
+  font-size: 42px;
+}
+
+.feynman__image {
   position: absolute;
   bottom: 0;
   left: 0;
   z-index: 0;
   height: 637px;
   width: 867px;
-}
-
-.link_feynman {
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  position: absolute;
-    right:48px;
-    top: 50%;
-  z-index: 1;
 }
 
 .kaufman {
@@ -241,14 +266,17 @@
 }
 
 .kaufman__triangle {
+  width: 877px;
+	height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
   position: absolute;
   right: -210px;
   top:0;
-  width: 877px;
-	height: 877px;
+  background-size: contain;
 }
 
 .footer {
+  display: flex;
   min-height: 350px;
   box-sizing: border-box;
   background-color: #1f1f1f;
@@ -266,48 +294,51 @@
   font-size: 18px;
   font-weight: normal;
   color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_copyright {
-  display: flex;
-  flex-direction: column;
   flex-basis: 711px;
   justify-content: space-between;
   align-items: stretch;
 }
 
-.footer__column_content_info {
-  display: flex;
-  flex-direction: column;
+.footer__autor {
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
 }
 
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
-}
-
-.column-links {
+.footer__column-links {
   display: flex;
   flex-direction: column;
   margin: 20px 0 16px;
 }
 
-.column-heading {
+.footer__column-heading {
   margin: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
 }
 
-.column-link {
+.footer__column-link {
   line-height: 30px;
   font-size: 18px;
   font-weight: normak;
   color: #f2f2f2;
   text-decoration: none;
+  transition: all 1s;
 }
 
-.social-icon {
+.footer__column-link:hover {
+  color: #2f80ed;
+  font-size: 20px;
+}
+
+.footer__social-icon {
   margin-right: 10px;
   width: 16px;
   height: 16px;
