--- a/blocks/khan/khan__book-pic/khan__book-pic.css
+++ b/blocks/khan/khan__book-pic/khan__book-pic.css
@@ -1,6 +1,7 @@
 .khan__book-pic {
   height: 608px;
   width: 620px;
-  margin-right: 48px;
-  overflow: hidden;
+  padding-right: 48px;
+  object-fit: cover;
+  object-position: top left;
 }
