--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,4 +1,8 @@
 .resources__logo-zone {
   width: 1100px;
-  padding-top: 80px;
+  margin: 0;
+  padding: 80px 0 0;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
 }
